Completed AngularJS/REST simple application. Refactored 'Jersey' module to 'rest_api. Made minor changes to the domain module to support the Angular module. Made aesthetic changes to the Struts 2 module, and began work on the JSF2 module.

--- a/angularjs/src/main/webapp/directives/main-header.html
+++ b/angularjs/src/main/webapp/directives/main-header.html
@@ -4,7 +4,7 @@
   -->
 <header>
     <div class="width">
-        <h1><a href="/index.html">smbnexus</a></h1>
+        <h1><a ng-click="page.setPage('home')" href="#">Angularjs/REST API Simple Application</a></h1>
     </div>
 </header>
 <!-- // Copyright (c) 2014 Shawn Wheeler All rights reserved.// -->
