--- a/angularjs/src/main/webapp/directives/top-nav.html
+++ b/angularjs/src/main/webapp/directives/top-nav.html
@@ -7,23 +7,11 @@
             <li ng-class="{selected: page.isPage('home')}" class="start">
                 <a ng-click="page.setPage('home')" href="#">Home</a>
             </li>
-            <li ng-class="{selected: page.isPage('examples')}">
-                <a ng-click="page.setPage('examples')" href="#">Examples</a>
+            <li ng-class="{selected: page.isPage('hello')}">
+                <a ng-click="page.setPage('hello')" href="#">Hello World</a>
             </li>
-            <li ng-class="{selected: page.isPage('solutions')}">
-                <a ng-click="page.setPage('solutions')" href="#">Solutions</a>
-            </li>
-            <li ng-class="{selected: page.isPage('devprogram')}">
-                <a ng-click="page.setPage('devprogram')" href="#">Development Program</a>
-            </li>
-            <li ng-class="{selected: page.isPage('signup')}">
-                <a ng-click="page.setPage('signup')" href="#">Sign Up</a>
-            </li>
-            <li ng-class="{selected: page.isPage('about')}">
-                <a ng-click="page.setPage('about')" href="#">About Us</a>
-            </li>
-            <li ng-class="{selected: page.isPage('contact')}" class="end">
-                <a ng-click="page.setPage('contact')" href="#">Contact</a>
+            <li ng-class="{selected: page.isPage('crud')}" class="end">
+                <a ng-click="page.setPage('crud')" href="#">CRUD</a>
             </li>
         </ul>
     </div>
