--- a/angularjs/src/main/webapp/index.html
+++ b/angularjs/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html ng-app="application">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>SMBNexus</title>
+    <title>AngularJS/REST API Simple Application</title>
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -10,7 +10,9 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
     <script type="text/javascript" src="js/angular/angular.min.js"></script>
     <script type="text/javascript" src="js/angular/app/application.js"></script>
-    <script type="text/javascript" src="js/angular/app/navigation.js"></script>
+    <script type="text/javascript" src="js/angular/app/directives.js"></script>
+    <script type="text/javascript" src="js/angular/app/services.js"></script>
+    <script type="text/javascript" src="js/angular/app/controllers.js"></script>
 </head>
 <body>
     <div id="container" ng-controller="PageController as page">
