--- a/jsf2/src/main/webapp/hello.xhtml
+++ b/jsf2/src/main/webapp/hello.xhtml
@@ -5,14 +5,13 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-        >
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html">
 <h:head>
     <title>First JSF Example</title>
 </h:head>
 <h:body>
-    <h3>JSF 2.2 Hello World Example</h3><h:form>
+    <h3>JSF 2.2 Hello World Example</h3>
+    <h:form>
     What's your name?
     <h:inputText value="#{helloBean.name}"></h:inputText>
     <h:commandButton value="Welcome Me" action="welcome"></h:commandButton>
