--- a/jsf2/src/main/webapp/welcome.xhtml
+++ b/jsf2/src/main/webapp/welcome.xhtml
@@ -1,18 +1,89 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  ~ Copyright (c) 2014. Shawn Wheeler. All rights reserved.
-  -->
+<!DOCTYPE html>
+<html
+        xmlns="http://www.w3.org/1999/xhtml"
+        xmlns:h="http://xmlns.jcp.org/jsf/html"
+        xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+        xmlns:f="http://xmlns.jcp.org/jsf/core">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>JSF 2 Simple Application</title>
+    <link rel="stylesheet" href="css/styles.css" type="text/css" />
+    <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
+</head>
+<h:body>
+    <div id="container">
+        <header>
+            <div class="width">
+                <h1><h:link value="JSF 2 Simple Application" outcome="index"/></h1>
+            </div>
+        </header>
+        <nav>
+            <div class="width">
+                <ul>
+                    <li class="start"><h:link value="Home" outcome="index"/></li>
+                    <li class="selected"><h:link value="Hello World" outcome="hello"/></li>
+                    <li class="end"><h:link value="CRUD" outcome="userList"/></li>
+                </ul>
+            </div>
+        </nav>
+        <div id="body" class="width">
+            <section id="content">
+                <article>
+                    <h2>Hello world, #{helloBean.name}!</h2><br/>
+                    <h:link class="button" value="Say hello again?" outcome="hello"/>
+                </article>
+            </section>
+            <aside class="sidebar">
+                <ul>
+                    <li>
+                        <h4>Pages</h4>
+                        <ul>
+                            <li><h:link value="Home Page" outcome="index"/></li>
+                            <li><h:link value="Hello World!" outcome="hello"/></li>
+                            <li><h:link value="Basic CRUD Example" outcome="userList"/></li>
+                        </ul>
+                    </li>
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-        >
-<h:head>
-    <title>Welcome</title>
-</h:head>
-<h:body bgcolor="white">
-    <h3>Everything went right!</h3>
-    <h4>Welcome #{helloBean.name}</h4>
+                </ul>
+
+            </aside>
+            <div class="clear"></div>
+        </div>
+        <footer>
+            <div class="footer-content width">
+                <ul>
+                    <li><h4>Pages</h4></li>
+                    <li><h:link value="Home Page" outcome="index"/></li>
+                    <li><h:link value="Hello World!" outcome="hello"/></li>
+                    <li><h:link value="Basic CRUD Example" outcome="userList"/></li>
+                </ul>
+
+                <ul>
+                    <li><h4>Test Applications</h4></li>
+                    <li><a href="#">Angular JS &#38; REST API</a></li>
+                    <li><a href="#">Wicket 6</a></li>
+                    <li><a href="#">Struts 2</a></li>
+                </ul>
+
+                <ul class="endfooter">
+                    <li><h4>Code Repositories</h4></li>
+                    <li><a href="https://github.com/MyPiTech/experior/tree/master/struts2" target="_blank">Struts 2</a></li>
+                    <li><a href="#">Angular JS</a></li>
+                    <li><a href="#">REST API</a></li>
+                    <li><a href="#">Wicket 6</a></li>
+                    <li><a href="#">JSF 2</a></li>
+                </ul>
+
+                <div class="clear"></div>
+            </div>
+            <div class="footer-bottom">
+                <p>&#169; MyPiTech 2014 - <a href="http://zypopwebtemplates.com/" target="_blank">Free CSS Website Templates</a> by ZyPOP</p>
+            </div>
+        </footer>
+    </div>
 </h:body>
 </html>
