jsf 2 minor refactoring

--- a/jsf2/src/main/webapp/welcome.xhtml
+++ b/jsf2/src/main/webapp/welcome.xhtml
@@ -26,7 +26,7 @@
                 <ul>
                     <li class="start"><h:link value="Home" outcome="index"/></li>
                     <li class="selected"><h:link value="Hello World" outcome="hello"/></li>
-                    <li class="end"><h:link value="CRUD" outcome="userList"/></li>
+                    <li class="end"><h:link value="CRUD" outcome="userlist"/></li>
                 </ul>
             </div>
         </nav>
@@ -44,7 +44,7 @@
                         <ul>
                             <li><h:link value="Home Page" outcome="index"/></li>
                             <li><h:link value="Hello World!" outcome="hello"/></li>
-                            <li><h:link value="Basic CRUD Example" outcome="userList"/></li>
+                            <li><h:link value="Basic CRUD Example" outcome="userlist"/></li>
                         </ul>
                     </li>
 
@@ -59,7 +59,7 @@
                     <li><h4>Pages</h4></li>
                     <li><h:link value="Home Page" outcome="index"/></li>
                     <li><h:link value="Hello World!" outcome="hello"/></li>
-                    <li><h:link value="Basic CRUD Example" outcome="userList"/></li>
+                    <li><h:link value="Basic CRUD Example" outcome="userlist"/></li>
                 </ul>
 
                 <ul>
