--- a/jsf2/src/main/webapp/index.xhtml
+++ b/jsf2/src/main/webapp/index.xhtml
@@ -26,7 +26,7 @@
             <ul>
                 <li class="start selected"><h:link value="Home" outcome="index"/></li>
                 <li class=""><h:link value="Hello World" outcome="hello"/></li>
-                <li class="end"><h:link value="CRUD" outcome="userList"/></li>
+                <li class="end"><h:link value="CRUD" outcome="userlist"/></li>
             </ul>
         </div>
     </nav>
@@ -50,7 +50,7 @@
                     <ul>
                         <li><h:link value="Home Page" outcome="index"/></li>
                         <li><h:link value="Hello World!" outcome="hello"/></li>
-                        <li><h:link value="Basic CRUD Example" outcome="userList"/></li>
+                        <li><h:link value="Basic CRUD Example" outcome="userlist"/></li>
                     </ul>
                 </li>
 
@@ -65,7 +65,7 @@
                 <li><h4>Pages</h4></li>
                 <li><h:link value="Home Page" outcome="index"/></li>
                 <li><h:link value="Hello World!" outcome="hello"/></li>
-                <li><h:link value="Basic CRUD Example" outcome="userList"/></li>
+                <li><h:link value="Basic CRUD Example" outcome="userlist"/></li>
             </ul>
 
             <ul>
