--- a/jsf2/src/main/webapp/userform.xhtml
+++ b/jsf2/src/main/webapp/userform.xhtml
@@ -26,7 +26,7 @@
             <ul>
                 <li class="start"><h:link value="Home" outcome="index"/></li>
                 <li class=""><h:link value="Hello World" outcome="hello"/></li>
-                <li class="end selected"><h:link value="CRUD" outcome="userList"/></li>
+                <li class="end selected"><h:link value="CRUD" outcome="userlist"/></li>
             </ul>
         </div>
     </nav>
@@ -34,7 +34,7 @@
         <section id="content">
             <article>
                 <h2>#{userManager.headerText}</h2>
-                <h:link value="Return To User List" outcome="userList" class="button"/><br/>
+                <h:link value="Return To User List" outcome="userlist" class="button"/><br/>
                 <h:form>
                     <table>
                         <tr>
@@ -63,7 +63,7 @@
                     <ul>
                         <li><h:link value="Home Page" outcome="index"/></li>
                         <li><h:link value="Hello World!" outcome="hello"/></li>
-                        <li><h:link value="Basic CRUD Example" outcome="userList"/></li>
+                        <li><h:link value="Basic CRUD Example" outcome="userlist"/></li>
                     </ul>
                 </li>
 
@@ -78,7 +78,7 @@
                 <li><h4>Pages</h4></li>
                 <li><h:link value="Home Page" outcome="index"/></li>
                 <li><h:link value="Hello World!" outcome="hello"/></li>
-                <li><h:link value="Basic CRUD Example" outcome="userList"/></li>
+                <li><h:link value="Basic CRUD Example" outcome="userlist"/></li>
             </ul>
 
             <ul>
