Styling changes for JSF2

--- a/jsf2/src/main/webapp/userlist.xhtml
+++ b/jsf2/src/main/webapp/userlist.xhtml
@@ -33,11 +33,10 @@
     <div id="body" class="width">
         <section id="content">
             <article>
-                <h2>User List</h2>
+                <h2 style="margin-bottom:10px;">User List</h2>
                 <h:form>
                     <h:commandLink action="#{userManager.newUser}" class="button" value="Create New User"/>
                 </h:form>
-                <br/>
                 <table cellspacing="5px;" style="margin-top:20px;" id="userTable" cellpadding="5px;">
                     <thead>
                     <tr>
