Wicket Hello World logic completed...

--- a/wicket6/src/main/webapp/com/mypitech/experior/wicket6/ui/panel/CrudPanel.html
+++ b/wicket6/src/main/webapp/com/mypitech/experior/wicket6/ui/panel/CrudPanel.html
@@ -7,7 +7,7 @@
     <wicket:panel>
         <section id="content">
             <article>
-                <h2>Wicket 6 Simple Application</h2>
+                <h2>CRUD</h2>
                 <p>This application is a Wicket 6 proof of concept. It includes a 'hello world', and basic CRUD logic. Check out the source code, or other test projects by clicking on the links below. Thanks for visiting!</p>
             </article>
         </section>
