--- a/wicket6/src/main/webapp/com/mypitech/experior/wicket6/ui/panel/HelloConfirmPanel.html
+++ b/wicket6/src/main/webapp/com/mypitech/experior/wicket6/ui/panel/HelloConfirmPanel.html
@@ -7,8 +7,8 @@
     <wicket:panel>
         <section id="content">
             <article>
-                <h2>Wicket 6 Simple Application</h2>
-                <p>This application is a Wicket 6 proof of concept. It includes a 'hello world', and basic CRUD logic. Check out the source code, or other test projects by clicking on the links below. Thanks for visiting!</p>
+                <h2><span wicket:id="name">Hello world, name!</span></h2><br>
+                <a class="button" wicket:id="helloLink">Say hello again?</a>
             </article>
         </section>
     </wicket:panel>
