--- a/wicket6/src/main/webapp/com/mypitech/experior/wicket6/ui/panel/CrudPanel.html
+++ b/wicket6/src/main/webapp/com/mypitech/experior/wicket6/ui/panel/CrudPanel.html
@@ -7,9 +7,31 @@
     <wicket:panel>
         <section id="content">
             <article>
-                <h2>CRUD</h2>
-                <p>This application is a Wicket 6 proof of concept. It includes a 'hello world', and basic CRUD logic. Check out the source code, or other test projects by clicking on the links below. Thanks for visiting!</p>
+                <div>
+                    <h2>User List</h2>
+                    <a class="button" style="margin-top:10px;" href="#">Create New User</a><br>
+                    <table cellspacing="5px;" style="margin-top:20px;" id="userTable" cellpadding="5px;">
+                        <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Description</th>
+                            <th>Update</th>
+                            <th>Delete</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr ng-repeat="user in users">
+                            <td>{{user.name}}</td>
+                            <td>{{user.description}}</td>
+                            <td><a href="#" ng-click="initUpdateForm(user); crudPageCtrl.setPage('2');">Update</a></td>
+                            <td><a href="#" ng-click="deleteUser(user)">Delete</a></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+
             </article>
+            </div>
         </section>
     </wicket:panel>
 </body>
