Updated footer on all projects to include new Spring MVC module.

--- a/jsf2/src/main/webapp/userform.xhtml
+++ b/jsf2/src/main/webapp/userform.xhtml
@@ -34,7 +34,7 @@
         <section id="content">
             <article>
                 <h2>#{userManager.headerText}</h2>
-                <h:link value="Return To User List" outcome="userlist" class="button"/><br/>
+                <h:link value="Return To User List" style="margin-bottom:20px;margin-top:10px;" outcome="userlist" class="button"/><br/>
                 <h:form>
                     <table>
                         <tr>
