--- a/jsf2/src/main/webapp/userlist.xhtml
+++ b/jsf2/src/main/webapp/userlist.xhtml
@@ -96,6 +96,7 @@
                 <li><h4>Test Applications</h4></li>
                 <li><a href="http://www.mypitech.com:8080/angularjs/" target="_blank">Angular JS &#38; REST API</a></li>
                 <li><a href="http://www.shawnsoft.com/cfSimpleApplication/" target="_blank">ColdFusion 11</a></li>
+                <li><a href="http://www.mypitech.com:8080/spring4/" target="_blank">Spring MVC 4</a></li>
                 <li><a href="http://www.mypitech.com:8080/struts2/" target="_blank">Struts 2</a></li>
                 <li><a href="http://www.mypitech.com:8080/wicket6/" target="_blank">Wicket 6</a></li>
             </ul>
@@ -106,6 +107,7 @@
                 <li><a href="https://github.com/MyPiTech/experior/tree/master/coldfusion11" target="_blank">ColdFusion 11</a></li>
                 <li><a href="https://github.com/MyPiTech/experior/tree/master/jsf2" target="_blank">JSF 2</a></li>
                 <li><a href="https://github.com/MyPiTech/experior/tree/master/rest_api" target="_blank">REST API</a></li>
+                <li><a href="https://github.com/MyPiTech/experior/tree/master/spring4" target="_blank">Spring MVC 4</a></li>
                 <li><a href="https://github.com/MyPiTech/experior/tree/master/struts2" target="_blank">Struts 2</a></li>
                 <li><a href="https://github.com/MyPiTech/experior/tree/master/wicket6" target="_blank">Wicket 6</a></li>
             </ul>
